--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
@@ -19,8 +20,9 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.0",
-    "set-value": "^3.0.1"
+    "react-scripts": "^3.0.0",
+    "set-value": "^3.0.1",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
