Start Now and About Us Section

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.0",
     "set-value": "^3.0.1",
