--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "boostrap": "^2.0.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "ejs": "^3.1.5",
