--- a/package.json
+++ b/package.json
@@ -3,25 +3,32 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@googlemaps/react-wrapper": "^1.1.15",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.5",
+    "emailjs-com": "^3.2.0",
     "eslint-utils": "1.4.1",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "mixin-deep": "^2.0.1",
     "morgan": "^1.10.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "react-googlemaps": "^0.4.0",
+    "react-hook-form": "^7.21.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.0.0",
+    "react-toastify": "^8.1.0",
     "set-value": "^3.0.1",
     "styled-components": "^5.3.1"
   },
